feat(all): get mumble working with SuperUser
Signed-off-by: Will Soto <will.soto9@gmail.com>

--- a/playbooks/roles/mumble-server/defaults/main.yml
+++ b/playbooks/roles/mumble-server/defaults/main.yml
@@ -1,6 +1,12 @@
 ---
-mumble_home_dir: '/var/lib/mumble-server'
-mumble_user: 'mumble-server'
+mumble_database: '/var/lib/{{ mumble_user }}/{{ mumble_user }}.sqlite'
 mumble_group: 'mumble-server'
-mumble_home: '{{ mumble_home_dir | dirname }}'
-mumble_database: '/var/lib/mumble-server/mumble-server.sqlite'
+mumble_ice_host: '127.0.0.1'
+mumble_ice_port: '6502'
+mumble_ice_url: '{{ mumble_ice_host }}:{{ mumble_ice_port }}'
+mumble_icesecretwrite: 'salt'
+mumble_ini_location: '/etc/mumble-server.ini'
+mumble_password: 'salt'
+mumble_process_id: '/var/run/{{ mumble_user }}/{{ mumble_user }}.pid'
+mumble_superuser_pw: 'salt'
+mumble_user: 'mumble-server'
