--- a/playbooks/roles/mumble-server/tasks/main.yml
+++ b/playbooks/roles/mumble-server/tasks/main.yml
@@ -26,11 +26,21 @@
     state: present
   become: yes
 
-- name: Configure Mumble Server
+- name: Add Murmur configuration
   template:
     src: murmur.ini.j2
-    dest: /etc/murmur.ini
-    owner: '{{ mumble_user }}'
+    dest: '{{ mumble_ini_location }}'
+    owner: root
     group: '{{ mumble_group }}'
-    mode: 640
+  notify: Restart Mumble Server
+
+- name: Add logrotate
+  template:
+    src: logrotate.j2
+    dest: /etc/logrotate.d/murmur
+    group: '{{ mumble_group }}'
+
+- name: Set SuperUser password
+  shell: murmurd -ini {{ mumble_ini_location }} -supw {{ mumble_superuser_pw }}
+  when: {{ mumble_superuser_pw != '' }}
   notify: Restart Mumble Server
