--- a/playbooks/roles/mumble-server/tasks/main.yml
+++ b/playbooks/roles/mumble-server/tasks/main.yml
@@ -44,3 +44,5 @@
   shell: murmurd -ini {{ mumble_ini_location }} -supw {{ mumble_superuser_pw }}
   when: mumble_superuser_pw != ''
   notify: Restart Mumble Server
+  tags:
+    - skip_ansible_lint
