--- a/playbooks/cloud-status.yml
+++ b/playbooks/cloud-status.yml
@@ -11,3 +11,5 @@
       raw: bash -c "for i in {1..30}; do if [ -f /var/lib/cloud/instance/boot-finished ]; then exit 0; fi; sleep 1; done; exit 1;"
       register: result
       failed_when: result.rc != 0
+      tags:
+        - skip_ansible_lint
