chore(ci): create ci playbook
Signed-off-by: Will Soto <will.soto9@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -9,4 +9,4 @@ dependencies:
 test:
   override:
     - ansible-lint playbooks/server.yml
-    - ansible-playbook playbooks/vagrant.yml
+    - ansible-playbook --inventory-file inventory playbooks/ci.yml
