refactor(playbooks): add ability to override vars
Signed-off-by: Will Soto <will.soto9@gmail.com>

--- a/playbooks/server.yml
+++ b/playbooks/server.yml
@@ -4,7 +4,11 @@
   connection: local
   gather_facts: yes
 
+  vars_files:
+    - ./overrides.yml
+
   roles:
+    # Taken from https://github.com/jlund/streisand
     - genesis-amazon
 
 - include: cloud-status.yml
